Соединил эволюционный алгоритм с остальным